Fixed a bug that causes vertical misalignment in label columns.

--- a/styles/flexible-panel.less
+++ b/styles/flexible-panel.less
@@ -107,19 +107,19 @@
       padding: 2px;
 
       div.cell-content {
-        display: inline-block;
         height: 100%;
         width: 100%;
         overflow: hidden;
         white-space: nowrap;
         border-radius: @component-border-radius;
+        padding: 2px;
 
         span {
           display: inline-block;
           vertical-align: middle;
           text-overflow: ellipsis;
           white-space: pre-wrap;
-          padding: 0px 3px;
+          //padding: 0px 3px;
         }
 
         div.pseudo {
